- Version number bump
- Store `TableRef` on the `StoreDir` directory (no-spike case only)

version 1.1.4: (2017-11-12)
- Only include genes that are expressed in at least 2 cells per condition for
differential residual dispersion testing (regression case only)

version 1.1.5: (2017-11-15)
- Removal of collapsed sampler prototype (from C++ and R) - moved to 
`CollapsedSampler` branch
- Number of genes used for stochastic reference increased to 10% of genes (no spikes only)

version 1.1.6: (2017-11-15)
- Added prototype for regression + no-spikes sampler

version 1.1.7: (2017-11-20)
- Nils added as author in cpp file
- Updated unit test for no-spikes case (changes due to change in stoch ref)
- Change in `BASiCS_MCMC` so that only biological counts go to C++
- Added factorizations in `muUpdateReg` and `deltaUpdateReg` (C++ code)

version 1.1.8: (2017-11-21) 
- `muUpdateRegNoSpikes` and `deltaUpdateRegNoSpikes` added to C++ code
- Clean-up of C++ code (repeated debug checks made into function)
- `lambdaUpdateReg` created as a separate function
- Vectorization of calculations related to regression implementation
- Global quantities (e.g. inv(V0)) taken outside the look (regression case)
- `sigma2UpdateReg` created as a separate function
- `betaUpdateReg` created as a separate function
- Fixed typo in sigma2 updates (regression case); unit test updated accordingly

version 1.1.9: (2017-11-23) - WIP
- `means` only updated when needed (regression case); unit test updated accordingly
- `deltaUpdateNoSpikes` + `deltaUpdateRegNoSpikes` removed as no longer required
- Simplification of terms in `deltaUpdateReg`
- Small changes to unify code format in C++ file
- Notation change: `phi` replaced by `s` in no-spikes implementation
- Unit test changed accordingly (no-spike)
- Minor style changes in `BASiCS_MCMC`
- `BASiCS_MCMC` function broken into smaller functions (easier to read). This
creates the following hidden functions: `HiddenBASiCS_MCMC_InputCheck`